@@ -38,28 +38,24 @@ exit_check () {
     esac
     
 
-    # intel i386 requires a recent kernel
+    # From glibc 2.3.5-7 real-i386 is dropped.
     if [ "$realarch" = i386 ]
     then
-	# From glibc 2.3.5-7 and linux-2.6 2.6.12-1, real-i386 is dropped.
-	#if kernel_compare_versions "$kernel_ver" lt 2.4.24
-	#then
-	    echo WARNING: This machine has real i386 class processor.
-	    echo Debian etch and later does not support such old hardware
-	    echo any longer.
-	    echo The reason is that \"bswap\" instruction is not supported
-	    echo on i386 class processors, and some core libraries have 
-	    echo such instruction.  You\'ll see illegal instruction error
-	    echo when you upgrade your Debian system.
-	    exit_check
-	#fi
+	echo WARNING: This machine has real i386 class processor.
+	echo Debian etch and later does not support such old hardware
+	echo any longer.
+	echo The reason is that \"bswap\" instruction is not supported
+	echo on i386 class processors, and some core libraries have 
+	echo such instruction.  You\'ll see illegal instruction error
+	echo when you upgrade your Debian system.
+	exit_check
     fi
 
     # The GNU libc requires 2.6 kernel (except on m68k) because we drop to 
     # support linuxthreads
     if [ "$realarch" != m68k ]
     then
-	if kernel_compare_versions "$kernel_ver" lt 2.4.1
+	if kernel_compare_versions "$kernel_ver" lt 2.6.1
 	then
 	    echo WARNING: POSIX threads library NPTL requires 2.6 and
 	    echo later kernel.  If you use 2.4 kernel, please upgrade your
