@@ -1,5 +1,5 @@
 GLIBC_OVERLAYS ?= $(shell ls glibc-linuxthreads* glibc-ports* glibc-libidn*)
-MIN_KERNEL_SUPPORTED := 2.6.0
+MIN_KERNEL_SUPPORTED := 2.6.1
 libc = libc6
 
 # Linuxthreads Config
